Thu Mar 19 00:17:46 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4: Cache results of argp check.

Sun Mar 15 15:54:43 1998  Owen Taylor  <owt1@cornell.edu>

	* gnome-x-checks.m4: Replaced checks for X and GTK
	with AM_PATH_GTK. x_include, X_LIBS, etc, variables no longer
	defined.

1998-03-12  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Add a check for <linewrap.h> -- this enables
	some optimizations when compiling `argp'.

Mon Mar  9 19:32:42 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4: Build vsnprintf.o, not vsnprint.o.

1998-03-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Add check for `vsnprintf'.

Sun Mar  8 17:04:28 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4: Set need_gnome_support shell variable.  Define
	BUILD_GNOME_SUPPORT automake conditional.  Define LTLIBOBJS.  Look
	for argp_domain element in struct argp.

Sat Mar  7 00:04:22 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4 (GNOME_SUPPORT_CHECKS): Add argp-pvh.o to
	LIBOBJS.

	* gnome-support.m4 (GNOME_SUPPORT_CHECKS): Check for strnlen().

Wed Mar  4 01:02:55 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-support.m4 (GNOME_SUPPORT_CHECKS): Check for argp code,
	strndup, program_invocation_name, program_invocation_short_name.

Mon Mar  2 15:27:44 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-x-checks.m4 (GNOME_X_CHECKS): Also check for SMlib.h; some
	Solaris systems have -lSM but not SMlib.h.

Sun Mar  1 17:49:42 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome.m4 (GNOME_INIT): Changed spacing so --help output looks
	right.

Fri Feb 27 10:05:34 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-objc-checks.m4 (GNOME_CHECK_OBJC): Set OBJECTIVE_C shell
	variable.

1998-02-26  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-x-checks.m4 (CPPFLAGS): Put $X_CFLAGS here, not in
	$CFLAGS. 
	(GNOME_HAVE_SM): New var.  `true' if we have libSM, `false'
	otherwise. 

1998-02-19  Raja R Harinath  <harinath@cs.umn.edu>
